[package]
name = "polkadot-primitives"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.130", optional = true, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true , branch = "bkchr-update-wasmtime-0.29.0" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
hex-literal = "0.3.3"
parity-util-mem = { version = "0.10.0", default-features = false, optional = true }


[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-consensus-slots/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"parity-util-mem",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
