[package]
name = "polkadot-rpc"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "bkchr-upgrade-wasmtime-0.29.0" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "bkchr-upgrade-wasmtime-0.29.0" }
