[package]
name = "polkadot-client"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }

pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "bkchr-upgrade-wasmtime-0.29.0" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot" }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
