[package]
name = "pallet-shift-session-manager"
description = "A Substrate Runtime module that selects 2/3 of initial validators for every session"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-update-wasmtime-0.29.0" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
serde = "1.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"sp-staking/std",
	"sp-std/std",
]
