[package]
name = "polkadot-simnet"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

test-runner = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

polkadot-primitives = { path = "../../../../primitives" }
polkadot-cli = { path = "../../../../cli", features = ["cli"] }
polkadot-service = { path = "../../../../node/service" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
polkadot-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.23"

[dev-dependencies]
log = "0.4.14"
